--- a/PPAI2023/nbproject/private/private.properties
+++ b/PPAI2023/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Desktop\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Usuario\\Desktop\\jcalendar-1.4.jar
-user.properties.file=C:\\Users\\cg_sa\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\17\\build.properties
