--- a/PPAI2023/nbproject/project.properties
+++ b/PPAI2023/nbproject/project.properties
@@ -47,7 +47,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
     ${file.reference.jcalendar-1.4.jar-4}:\
-    ${file.reference.postgresql-42.7.0.jar}
+    ${file.reference.postgresql-42.7.0.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
