--- a/PPAI2023/nbproject/project.properties
+++ b/PPAI2023/nbproject/project.properties
@@ -49,7 +49,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-4}:\
     ${file.reference.postgresql-42.7.0.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.PDF.classpath}
+    ${libs.PDF.classpath}:\
+    ${libs.pdf.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
